Fix scrollbar

--- a/src/css/mono.less
+++ b/src/css/mono.less
@@ -2,9 +2,9 @@
 @import "./logue.less";
 
 html, body {
-    height: 100%;
-    position: relative;
     scroll-behavior: smooth;
+    position: relative;
+    height: calc(100% - 56px) !important;
 }
 
 body {
